<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/heart_icon"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_name_hint"/>

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_password_hint"/>

    <Button
        android:id="@+id/btn_register_submit_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_register_submit_txt"/>

</LinearLayout>
